--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "run-p dev:*",
 		"dev:schema-types": "onchange schemas configschema.json -i -- npm run schema-types",
 		"dev:tsc": "tsc -b src/browser src/extension -w --preserveWatchOutput",
-		"dev:vite": "vite",
+		"dev:vite": "vite --host",
 		"dev:nodecg": "onchange extension schema configschema.json -ik -- node --enable-source-maps ../..",
 		"format": "npm run test:prettier -- --write",
 		"build": "vite build",
